RESOLVED FIXED30237
DOM Content and Load lines aren't shown if a page is loaded when the inspector is up
https://bugs.webkit.org/show_bug.cgi?id=30237
Summary DOM Content and Load lines aren't shown if a page is loaded when the inspecto...
Brian Weinstein
Reported 2009-10-08 15:07:34 PDT
DOM Content and Load lines aren't shown if a page is loaded when the inspector is up. The lines are shown if a page is loaded and then the inspector open, but if the inspector is open while the page is loading, the lines show up intermittently at best.
Attachments
Fix (1.94 KB, patch)
2009-10-08 15:10 PDT, Brian Weinstein
timothy: review+
bweinstein: commit-queue-
Brian Weinstein
Comment 1 2009-10-08 15:10:27 PDT
Brian Weinstein
Comment 2 2009-10-08 15:21:59 PDT
Note You need to log in before you can comment on or make changes to this bug.