Fixes <https://bugs.webkit.org/show_bug.cgi?id=30237>. DOM Content and Load lines aren't shown if a page is loaded when the inspector is up.

Reviewed by Timothy Hatcher.

Make sure to call update script object if we have an InspectorFrontend to
call it on when we get one of the new events.

* inspector/InspectorController.cpp:
(WebCore::InspectorController::mainResourceFiredDOMContentEvent):
(WebCore::InspectorController::mainResourceFiredLoadEvent):



git-svn-id: svn://svn.chromium.org/blink/trunk@49327 bbb929c8-8fbe-4397-9dbb-9b2b20218538