third_party/WebKit/WebCore/inspector/InspectorController.cpp
@@ -905,8 +905,11 @@ void InspectorController::mainResourceFiredDOMContentEvent(DocumentLoader* loade
     if (!enabled() || !isMainResourceLoader(loader, url))
         return;
 
-    if (m_mainResource)
+    if (m_mainResource) {
         m_mainResource->markDOMContentEventTime();
+        if (m_frontend)
+            m_mainResource->updateScriptObject(m_frontend.get());
+    }
 }
 
 void InspectorController::mainResourceFiredLoadEvent(DocumentLoader* loader, const KURL& url)
@@ -914,8 +917,11 @@ void InspectorController::mainResourceFiredLoadEvent(DocumentLoader* loader, con
     if (!enabled() || !isMainResourceLoader(loader, url))
         return;
 
-    if (m_mainResource)
+    if (m_mainResource) {
         m_mainResource->markLoadEventTime();
+        if (m_frontend)
+            m_mainResource->updateScriptObject(m_frontend.get());
+    }
 }
 
 bool InspectorController::isMainResourceLoader(DocumentLoader* loader, const KURL& requestUrl)
